Searchbox and overflow bugs fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+
+}
+
 .bg-gray-fill{
   background-color: #F5F7FA;
 }
@@ -31,6 +35,8 @@
   grid-template-areas: 'hpt hpt hsb hgi hbi hui';
   align-items: center;
   gap: 1rem;
+  padding-right: 10px;
+  max-width: 100%;
 }
 
 .header-page-title{
@@ -73,8 +79,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
 }
 
 /* If screen size is 600px wide, or less */
